Added some music to html files

--- a/campaign/locations/regions/Matella/Alderpine/Alderpine.html
+++ b/campaign/locations/regions/Matella/Alderpine/Alderpine.html
@@ -207,11 +207,7 @@
     <a href="../Zhu_Lang_Dynasty/Zhu_Lang_Dynasty.html">
      Zhu Lang Dynasty
     </a>
-    and
-    <a href="../The_Ashenlands/The_Ashenlands.html">
-     The Ashenlands
-    </a>
-    influence the region with their respective governing styles. Here is an overview of the governments present in Alderpine and their relation to these neighboring provinces:
+    and Ashenlands influence the region with their respective governing styles. Here is an overview of the governments present in Alderpine and their relation to these neighboring provinces:
    </p>
    <h4>
     Tribal Governance
@@ -235,10 +231,7 @@
     may shape the political landscape and interactions in the northern regions of Alderpine.
    </p>
    <h4>
-    Influence of
-    <a href="../The_Ashenlands/The_Ashenlands.html">
-     The Ashenlands
-    </a>
+    Influence of Ashenlands
    </h4>
    <p class="subsection">
     Located in the southern reaches of Alderpine,
@@ -249,7 +242,7 @@
     <a href="../The_Ashenlands/The_Ashenlands.html">
      The Ashenlands
     </a>
-    emphasis on trade and capitalism can foster economic ties and cultural exchange between Alderpine and this neighboring province.
+    ' emphasis on trade and capitalism can foster economic ties and cultural exchange between Alderpine and this neighboring province.
    </p>
    <h4>
     Self-Governance and Independence
@@ -262,11 +255,7 @@
     <a href="../Zhu_Lang_Dynasty/Zhu_Lang_Dynasty.html">
      Zhu Lang Dynasty
     </a>
-    and
-    <a href="../The_Ashenlands/The_Ashenlands.html">
-     The Ashenlands
-    </a>
-    can shape certain aspects of the region's politics, trade relations, and cultural exchanges. The dynamics between these provinces and Alderpine contribute to the diverse political landscape and cultural tapestry of the province, enriching the experiences and interactions of its inhabitants.
+    and Ashenlands can shape certain aspects of the region's politics, trade relations, and cultural exchanges. The dynamics between these provinces and Alderpine contribute to the diverse political landscape and cultural tapestry of the province, enriching the experiences and interactions of its inhabitants.
    </p>
   </div>
   <hr/>
@@ -416,6 +405,80 @@
      </li>
      <li>
       Lomelindei: The large world tree deep within Alderpine.
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-music">
+   <h3>
+    Music And Ambiance
+   </h3>
+   <p>
+    <ul>
+     <li>
+      <a href="https://www.youtube.com/watch?v=Hj9j_VyIeks">
+       Feralas - Music &amp; Ambience | World of Warcraft Classic
+      </a>
+      <a href="../../../../../music/Feralas__Music_&amp;_Ambience__World_of_Warcraft_Classic.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=9fWeZxI2SDQ">
+       Vanilla Stranglethorn Vale - Music &amp; Ambience (3 hours, World of Warcraft Classic)
+      </a>
+      <a href="../../../../../music/Vanilla_Stranglethorn_Vale__Music_&amp;_Ambience_(3_hours,_World_of_Warcraft_Classic).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=B9y73BrIjEo&amp;t=492s">
+       Sholazar Basin - Music &amp; Ambience | World of Warcraft Wrath of the Lich King
+      </a>
+      <a href="../../../../../music/Sholazar_Basin__Music_&amp;_Ambience__World_of_Warcraft_Wrath_of_the_Lich_King.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=eaUdmBy9AJM">
+       Crystalsong Forest - Music &amp; Ambience | World of Warcraft Wrath of the Lich King
+      </a>
+      <a href="../../../../../music/Crystalsong_Forest__Music_&amp;_Ambience__World_of_Warcraft_Wrath_of_the_Lich_King.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=YfWBF-WhRMM">
+       Zuldazar - Music &amp; Ambience (1 hour, 4K, World of Warcraft Battle for Azeroth aka BfA)
+      </a>
+      <a href="../../../../../music/Zuldazar__Music_&amp;_Ambience_(1_hour,_4K,_World_of_Warcraft_Battle_for_Azeroth_aka_BfA).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=AW8tKRvh_aI">
+       Teldrassil Before the Storm - Music &amp; Ambience (1 hour, 4K, World of Warcraft Legion)
+      </a>
+      <a href="../../../../../music/Teldrassil_Before_the_Storm__Music_&amp;_Ambience_(1_hour,_4K,_World_of_Warcraft_Legion).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=i1QNO4b6uqI
+">
+       Vanilla Ashenvale - Night Ambience ASMR (1 hour, 4K, World of Warcraft Classic)
+      </a>
+      <a href="../../../../../music/Vanilla_Ashenvale__Night_Ambience_ASMR_(1_hour,_4K,_World_of_Warcraft_Classic).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
      </li>
     </ul>
    </p>
