--- a/campaign/locations/regions/Matella/Bakaria/Bakaria.html
+++ b/campaign/locations/regions/Matella/Bakaria/Bakaria.html
@@ -57,9 +57,7 @@
     Summary
    </h3>
    <p class="first-paragraph">
-    Bakaria, the province nestled in the northwest of
-    <a href="../Tinco_Merz/Tinco_Merz.html">
-     Tinco Merz</a>, is a land of awe-inspiring natural beauty and mystical connections with the animal kingdom. Bounded by the vast coastal expanses to the north and west, towering mountains to the south, and adorned with lush pine forests that stretch throughout, Bakaria offers a haven for those who share an intimate bond with the creatures of the wild.
+    Bakaria, the province nestled in the northwest of Tinco Merz, is a land of awe-inspiring natural beauty and mystical connections with the animal kingdom. Bounded by the vast coastal expanses to the north and west, towering mountains to the south, and adorned with lush pine forests that stretch throughout, Bakaria offers a haven for those who share an intimate bond with the creatures of the wild.
    </p>
    <p>
     In Bakaria, the art of beast mastery and druidic practices are revered and deeply ingrained in the culture. The province is renowned for its beastmasters, who possess a unique ability to communicate with and form profound connections with the wildlife that inhabits the region. These skilled individuals are not only respected for their command over animals but also for their wisdom in maintaining the delicate balance between humanity and nature.
