--- a/campaign/locations/regions/Matella/Eldara/Eldara.html
+++ b/campaign/locations/regions/Matella/Eldara/Eldara.html
@@ -56,7 +56,7 @@
    <h3>
     Summary
    </h3>
-   <p>
+   <p class="first-paragraph">
     Eldara, a sprawling province nestled between the majestic Sifariato Mountains to the north and the tranquil ocean to the south, presents a captivating landscape of contrasting beauty. With its predominantly arid and desert-like terrain, punctuated by occasional bursts of vegetation along the shores, Eldara exudes an aura of rugged charm and serene desolation. The province is characterized by vast stretches of sun-scorched sand dunes, ancient rock formations, and shimmering mirages that dance in the distance. Despite the harsh environment, life thrives in Eldara, sustained by the presence of small natural springs that intermittently emerge, dotting the arid expanse and offering precious water sources for settlements to flourish. Beneath the surface, an abundance of groundwater reserves awaits those equipped with the means to tap into its life-sustaining flow. Eldara beckons adventurers and wanderers to discover its secrets, explore its hidden oases, and unravel the tales woven amidst the shifting sands of time.
    </p>
   </div>
@@ -290,6 +290,9 @@
      <li>
       Vifavea
      </li>
+     <li>
+      Pentara
+     </li>
     </ul>
    </p>
   </div>
@@ -317,6 +320,71 @@
      </li>
      <li>
       Goldenpeak River
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-music">
+   <h3>
+    Music And Ambiance
+   </h3>
+   <p>
+    <ul>
+     <li>
+      <a href="https://www.youtube.com/watch?v=jA4hiD_tQw8">
+       Uldum - Music &amp; Ambience | World of Warcraft Cataclysm
+      </a>
+      <a href="../../../../../music/Uldum__Music_&amp;_Ambience__World_of_Warcraft_Cataclysm.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=YTnLxsYOj8w">
+       Vanilla Tanaris - Music &amp; Ambience (1 hour, 4K, World of Warcraft Classic)
+      </a>
+      <a href="../../../../../music/Vanilla_Tanaris__Music_&amp;_Ambience_(1_hour,_4K,_World_of_Warcraft_Classic).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=kaZMF6pov04">
+       WoW Classic Ahn'Qiraj - Music &amp; Ambience (1 hour, 4K, World of Warcraft)
+      </a>
+      <a href="../../../../../music/WoW_Classic_Ahn'Qiraj__Music_&amp;_Ambience_(1_hour,_4K,_World_of_Warcraft).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=HjF-PXip0z4">
+       Vol'Dun - Music &amp; Ambience (1 hour, 4K, World of Warcraft Battle for Azeroth aka BfA)
+      </a>
+      <a href="../../../../../music/Vol'Dun__Music_&amp;_Ambience_(1_hour,_4K,_World_of_Warcraft_Battle_for_Azeroth_aka_BfA).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=6UPvyboCIf8">
+       Vanilla Silithus - Music &amp; Ambience (1 hour, 4K, World of Warcraft Classic)
+      </a>
+      <a href="../../../../../music/Vanilla_Silithus__Music_&amp;_Ambience_(1_hour,_4K,_World_of_Warcraft_Classic).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=eEl8QGmrWQg
+">
+       Vanilla Thousand Needles - Music &amp; Ambience (1 hour, World of Warcraft Classic)
+      </a>
+      <a href="../../../../../music/Vanilla_Thousand_Needles__Music_&amp;_Ambience_(1_hour,_World_of_Warcraft_Classic).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
      </li>
     </ul>
    </p>
