--- a/campaign/locations/regions/Matella/Gharoni_Highlands/Gharoni_Highlands.html
+++ b/campaign/locations/regions/Matella/Gharoni_Highlands/Gharoni_Highlands.html
@@ -264,5 +264,70 @@
    </p>
   </div>
   <hr/>
+  <div class="dnd-music">
+   <h3>
+    Music And Ambiance
+   </h3>
+   <p>
+    <ul>
+     <li>
+      <a href="https://www.youtube.com/watch?v=8FDy8FZBUwI">
+       Dragonblight - Music &amp; Ambience | World of Warcraft Wrath of the Lich King
+      </a>
+      <a href="../../../../../music/Dragonblight__Music_&amp;_Ambience__World_of_Warcraft_Wrath_of_the_Lich_King.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=mPISzK15U0c">
+       Blade's Edge Mountains - Music &amp; Ambience | World of Warcraft The Burning Crusade
+      </a>
+      <a href="../../../../../music/Blade's_Edge_Mountains__Music_&amp;_Ambience__World_of_Warcraft_The_Burning_Crusade.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=eaUdmBy9AJM">
+       Crystalsong Forest - Music &amp; Ambience | World of Warcraft Wrath of the Lich King
+      </a>
+      <a href="../../../../../music/Crystalsong_Forest__Music_&amp;_Ambience__World_of_Warcraft_Wrath_of_the_Lich_King.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=y9e6TtWa_MA">
+       Grizzly Hills - Music &amp; Ambience | World of Warcraft Wrath of the Lich King
+      </a>
+      <a href="../../../../../music/Grizzly_Hills__Music_&amp;_Ambience__World_of_Warcraft_Wrath_of_the_Lich_King.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=z9uWOeB_iF4">
+       Stormsong Valley - Tranquil Music &amp; Ambience (1 h, 4K, World of Warcraft Battle for Azeroth aka BfA)
+      </a>
+      <a href="../../../../../music/Stormsong_Valley__Tranquil_Music_&amp;_Ambience_(1_h,_4K,_World_of_Warcraft_Battle_for_Azeroth_aka_BfA).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=bQXbsVQotFc
+">
+       Arathi Highlands- Music &amp; Rain Ambience (1 hour, 4K, World of Warcraft Vanilla)
+      </a>
+      <a href="../../../../../music/Arathi_Highlands_Music_&amp;_Rain_Ambience_(1_hour,_4K,_World_of_Warcraft_Vanilla).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
  </body>
 </html>
