--- a/campaign/locations/regions/Matella/Loch_Modar/Loch_Modar.html
+++ b/campaign/locations/regions/Matella/Loch_Modar/Loch_Modar.html
@@ -262,5 +262,52 @@
    </p>
   </div>
   <hr/>
+  <div class="dnd-music">
+   <h3>
+    Music And Ambiance
+   </h3>
+   <p>
+    <ul>
+     <li>
+      <a href="https://www.youtube.com/watch?v=xVjH1UU1fMc">
+       Vanilla Loch Modan - Music &amp; Rain Ambience (1 hour, 4K, World of Warcraft Classic)
+      </a>
+      <a href="../../../../../music/Vanilla_Loch_Modan__Music_&amp;_Rain_Ambience_(1_hour,_4K,_World_of_Warcraft_Classic).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=rUpit9jFTsQ">
+       Vanilla Dun Morogh - Music &amp; Ambience (3 hours, World of Warcraft Classic)
+      </a>
+      <a href="../../../../../music/Vanilla_Dun_Morogh__Music_&amp;_Ambience_(3_hours,_World_of_Warcraft_Classic).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=8r_dAp1x0mg">
+       Storm Peaks - Music &amp; Ambience | World of Warcraft Wrath of the Lich King
+      </a>
+      <a href="../../../../../music/Storm_Peaks__Music_&amp;_Ambience__World_of_Warcraft_Wrath_of_the_Lich_King.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=y9e6TtWa_MA
+">
+       Grizzly Hills - Music &amp; Ambience | World of Warcraft Wrath of the Lich King
+      </a>
+      <a href="../../../../../music/Grizzly_Hills__Music_&amp;_Ambience__World_of_Warcraft_Wrath_of_the_Lich_King.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
  </body>
 </html>
