--- a/campaign/locations/regions/Matella/The_Ashenlands/The_Ashenlands.html
+++ b/campaign/locations/regions/Matella/The_Ashenlands/The_Ashenlands.html
@@ -510,5 +510,79 @@
    </p>
   </div>
   <hr/>
+  <div class="dnd-music">
+   <h3>
+    Music And Ambiance
+   </h3>
+   <p>
+    <ul>
+     <li>
+      <a href="https://www.youtube.com/watch?v=aKKpqIw-D0A">
+       Vanilla Elwynn Forest Music &amp; Ambience (3 hours, World of Warcraft Classic)
+      </a>
+      <a href="../../../../../music/Vanilla_Elwynn_Forest_Music_&amp;_Ambience_(3_hours,_World_of_Warcraft_Classic).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=mALT1i7MvvY">
+       Redridge Mountains - Music &amp; Ambience | World of Warcraft
+      </a>
+      <a href="../../../../../music/Redridge_Mountains__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=lUn0SJvnM34">
+       Talador - Music &amp; Ambience | World of Warcraft Warlords of Draenor
+      </a>
+      <a href="../../../../../music/Talador__Music_&amp;_Ambience__World_of_Warcraft_Warlords_of_Draenor.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=B9y73BrIjEo">
+       Sholazar Basin - Music &amp; Ambience | World of Warcraft Wrath of the Lich King
+      </a>
+      <a href="../../../../../music/Sholazar_Basin__Music_&amp;_Ambience__World_of_Warcraft_Wrath_of_the_Lich_King.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=uTLVWooy2kc">
+       Eversong Woods - Music &amp; Ambience | World of Warcraft The Burning Crusade
+      </a>
+      <a href="../../../../../music/Eversong_Woods__Music_&amp;_Ambience__World_of_Warcraft_The_Burning_Crusade.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=z9uWOeB_iF4">
+       Stormsong Valley - Tranquil Music &amp; Ambience (1 h, 4K, World of Warcraft Battle for Azeroth aka BfA)
+      </a>
+      <a href="../../../../../music/Stormsong_Valley__Tranquil_Music_&amp;_Ambience_(1_h,_4K,_World_of_Warcraft_Battle_for_Azeroth_aka_BfA).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=Y9Dl-IPackY
+">
+       Vanilla Alterac Mountains - Music &amp; Ambience | World of Warcraft Vanilla
+      </a>
+      <a href="../../../../../music/Vanilla_Alterac_Mountains__Music_&amp;_Ambience__World_of_Warcraft_Vanilla.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
  </body>
 </html>
