--- a/campaign/locations/regions/Matella/Zenitha/Zenitha.html
+++ b/campaign/locations/regions/Matella/Zenitha/Zenitha.html
@@ -123,5 +123,25 @@
    </p>
   </div>
   <hr/>
+  <div class="dnd-music">
+   <h3>
+    Music And Ambiance
+   </h3>
+   <p>
+    <ul>
+     <li>
+      <a href="https://www.youtube.com/watch?v=7cy_RK04TUA
+">
+       Vanilla Winterspring Music &amp; Ambience (1 hour, World of Warcraft Classic)
+      </a>
+      <a href="../../../../../music/Vanilla_Winterspring_Music_&amp;_Ambience_(1_hour,_World_of_Warcraft_Classic).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
  </body>
 </html>
