--- a/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/Gostee_Wilderness.html
+++ b/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/Gostee_Wilderness.html
@@ -58,7 +58,7 @@
    </h3>
    <p class="first-paragraph">
     The Gostee Wilderness, nestled in the southwestern part of the
-    <a href="../Zhu_Lang_Dynasty/Zhu_Lang_Dynasty.html">
+    <a href="Zhu_Lang_Dynasty.html">
      Zhu Lang Dynasty
     </a>
     Province, is an eerie and haunting region steeped in darkness and mystery. This cursed expanse of dead and haunted forest is a place where few dare to venture. The air hangs heavy with an unnatural stillness, broken only by the chilling whispers of the wind that carries echoes of forgotten secrets.
@@ -125,6 +125,44 @@
      </li>
      <li>
       These landmarks and features within the Gostee Wilderness weave together a tapestry of mystery and supernatural intrigue, heightening the sense of foreboding and enchantment that permeates the cursed forest. Exploring these enigmatic sites is not for the faint-hearted, as they hold both danger and the potential for uncovering ancient secrets hidden within the veil of the supernatural.
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-music">
+   <h3>
+    Music And Ambiance
+   </h3>
+   <p>
+    <ul>
+     <li>
+      <a href="https://www.youtube.com/watch?v=E-fMhVtaYVY">
+       Vanilla Western Plaguelands - Music &amp; Ambience (1 hour, 4K, World of Warcraft Classic)
+      </a>
+      <a href="../../../../../music/Vanilla_Western_Plaguelands__Music_&amp;_Ambience_(1_hour,_4K,_World_of_Warcraft_Classic).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=oxK1ubI0JTo">
+       Duskwood - Music &amp; Ambience | World of Warcraft
+      </a>
+      <a href="../../../../../music/Duskwood__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=Fb2K1KCXzUs
+">
+       Zaralek Cavern - Music &amp; Ambience | World of Warcraft 10.1 Embers of Neltharion
+      </a>
+      <a href="../../../../../music/Zaralek_Cavern__Music_&amp;_Ambience__World_of_Warcraft_10.1_Embers_of_Neltharion.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
      </li>
     </ul>
    </p>
