Updated some files

--- a/campaign/characters/non-player/img/index.html
+++ b/campaign/characters/non-player/img/index.html
@@ -86,6 +86,11 @@
      </a>
     </li>
     <li>
+     <a href="elara_nightshade.jpg">
+      elara nightshade.jpg
+     </a>
+    </li>
+    <li>
      <a href="elric_nightingale.jpg">
       elric nightingale.jpg
      </a>
@@ -128,6 +133,11 @@
     <li>
      <a href="seraphina_lightbringer.jpg">
       seraphina lightbringer.jpg
+     </a>
+    </li>
+    <li>
+     <a href="seraphina_thornvale.jpg">
+      seraphina thornvale.jpg
      </a>
     </li>
     <li>
