--- a/campaign/characters/non-player/index.html
+++ b/campaign/characters/non-player/index.html
@@ -191,6 +191,11 @@
      </a>
     </li>
     <li>
+     <a class="image-index-link" href="img/elara_nightshade.jpg">
+      img/elara_nightshade.jpg
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/elric_nightingale.jpg">
       img/elric_nightingale.jpg
      </a>
@@ -233,6 +238,11 @@
     <li>
      <a class="image-index-link" href="img/seraphina_lightbringer.jpg">
       img/seraphina_lightbringer.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/seraphina_thornvale.jpg">
+      img/seraphina_thornvale.jpg
      </a>
     </li>
     <li>
