--- a/campaign/locations/regions/Matella/Alderpine/Alderpine.html
+++ b/campaign/locations/regions/Matella/Alderpine/Alderpine.html
@@ -398,16 +398,10 @@
    <p>
     <ul>
      <li>
-      <a href="Talleril.html">
-       Talleril
-      </a>
-      : A small island far off the coast of Alderpine.
+      Talleril: A small island far off the coast of Alderpine.
      </li>
      <li>
-      <a href="Enthilma.html">
-       Enthilma
-      </a>
-      : A small island off the coast of Alderpine.
+      Enthilma: A small island off the coast of Alderpine.
      </li>
      <li>
       Lomelindei: The large world tree deep within Alderpine.
