--- a/campaign/locations/regions/Matella/Eldara/Eldara.html
+++ b/campaign/locations/regions/Matella/Eldara/Eldara.html
@@ -350,10 +350,10 @@
     The realm of Eldara harbors a wealth of intriguing and exceptional creatures that have adapted to the formidable challenges posed by its arid and unforgiving desert terrain. Within this vast expanse of sun-scorched dunes and parched plains, a diverse array of unique beings flourishes, each a testament to the remarkable resilience and ingenuity of life in the desert. From the towering Sandstriders to the radiant Sunfire Serpents and the elusive Mirage Cacti, Eldara's creatures captivate with their adaptations and enigmatic nature. In this section, we delve into the rich tapestry of Eldara's biodiversity, shedding light on some of the most captivating inhabitants that call this desert realm their home. Join us on an exploration of the secrets and wonders that lie within the shifting sands of Eldara as we unveil the remarkable fauna that thrives in this extraordinary desert landscape.
    </p>
    <p>
-    Sandstriders: These towering creatures are well-adapted to the desert environment of Eldara. Sandstriders are enormous, arachnid-like beings with elongated limbs and a tough exoskeleton that blends seamlessly with the sandy dunes. They navigate effortlessly across the shifting sands, using their powerful legs to traverse the desert landscape in search of prey. With sharp mandibles and a keen sense of vibration, they can detect hidden creatures beneath the sand, making them skilled hunters in the arid plains of Eldara.
-   </p>
-   <p>
     <ul>
+     <li>
+      Sandstriders: These towering creatures are welladapted to the desert environment of Eldara. Sandstriders are enormous, arachnidlike beings with elongated limbs and a tough exoskeleton that blends seamlessly with the sandy dunes. They navigate effortlessly across the shifting sands, using their powerful legs to traverse the desert landscape in search of prey. With sharp mandibles and a keen sense of vibration, they can detect hidden creatures beneath the sand, making them skilled hunters in the arid plains of Eldara.
+     </li>
      <li>
       Sunfire Serpents: Gliding through the scorching air of Eldara, Sunfire Serpents are radiant and aweinspiring creatures. They possess iridescent scales that shimmer with vibrant hues of orange, yellow, and gold, mirroring the intense desert sun. These serpents are known for their ability to harness solar energy, absorbing sunlight to sustain themselves in the arid climate. It is said that their mere presence can bring warmth and light to the darkest corners of the desert, making them symbols of hope and resilience.
      </li>
@@ -374,9 +374,7 @@
    <p>
     <ul>
      <li>
-      <a href="Sifariato_Mountains.html">
-       Sifariato Mountains
-      </a>
+      Sifariato Mountains
      </li>
      <li>
       Lessercrest Mountains
