Updated some links accidentally reverted

--- a/campaign/locations/regions/Matella/Eldara/Eldara.html
+++ b/campaign/locations/regions/Matella/Eldara/Eldara.html
@@ -374,7 +374,9 @@
    <p>
     <ul>
      <li>
-      Sifariato Mountains
+      <a href="Sifariato_Mountains.html">
+       Sifariato Mountains
+      </a>
      </li>
      <li>
       Lessercrest Mountains
