--- a/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/Zhu_Lang_Dynasty.html
+++ b/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/Zhu_Lang_Dynasty.html
@@ -276,7 +276,10 @@
    <p>
     <ul>
      <li>
-      Gostee Wilderness: A cursed area of dead and haunted forest nestled against the mountains to the southwest of the Zhu Lang Dynasty.
+      <a href="Gostee_Wilderness.html">
+       Gostee Wilderness
+      </a>
+      : A cursed area of dead and haunted forest nestled against the mountains to the southwest of the Zhu Lang Dynasty.
      </li>
      <li>
       Spicatus Venenorum Woods (Spicatus meaning "spiked" and Venenorum meaning "of venom")
