Fixed some list and header creator bugs

--- a/campaign/items/consumables/drink/index.html
+++ b/campaign/items/consumables/drink/index.html
@@ -50,6 +50,11 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Desert_Sage_Infusion.html">
+      Desert Sage Infusion
+     </a>
+    </li>
    </ul>
   </div>
  </body>
