--- a/campaign/locations/regions/Matella/Alderpine/img/index.html
+++ b/campaign/locations/regions/Matella/Alderpine/img/index.html
@@ -55,6 +55,16 @@
       Alderpine.jpg
      </a>
     </li>
+    <li>
+     <a href="Riava_Plateau.jpg">
+      Riava Plateau.jpg
+     </a>
+    </li>
+    <li>
+     <a href="Talleril.jpg">
+      Talleril.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
