--- a/campaign/locations/regions/Matella/Elda_Reem_Passlands/img/index.html
+++ b/campaign/locations/regions/Matella/Elda_Reem_Passlands/img/index.html
@@ -55,6 +55,21 @@
       Elda Reem Passlands.jpg
      </a>
     </li>
+    <li>
+     <a href="Shimmering_Pass.jpg">
+      Shimmering Pass.jpg
+     </a>
+    </li>
+    <li>
+     <a href="Silithid_Plateau.jpg">
+      Silithid Plateau.jpg
+     </a>
+    </li>
+    <li>
+     <a href="Utengho_Marshlands.jpg">
+      Utengho Marshlands.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
