--- a/campaign/locations/regions/Matella/Elda_Reem_Passlands/index.html
+++ b/campaign/locations/regions/Matella/Elda_Reem_Passlands/index.html
@@ -56,8 +56,28 @@
      </a>
     </li>
     <li>
+     <a href="Utengho_Marshlands.html">
+      Utengho Marshlands
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/Elda_Reem_Passlands.jpg">
       img/Elda_Reem_Passlands.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Shimmering_Pass.jpg">
+      img/Shimmering_Pass.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Silithid_Plateau.jpg">
+      img/Silithid_Plateau.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Utengho_Marshlands.jpg">
+      img/Utengho_Marshlands.jpg
      </a>
     </li>
    </ul>
