--- a/campaign/locations/regions/Matella/Eldara/img/index.html
+++ b/campaign/locations/regions/Matella/Eldara/img/index.html
@@ -55,6 +55,11 @@
       Eldara.jpg
      </a>
     </li>
+    <li>
+     <a href="Sifariato_Mountains.jpg">
+      Sifariato Mountains.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
