--- a/campaign/locations/regions/Matella/Eldara/index.html
+++ b/campaign/locations/regions/Matella/Eldara/index.html
@@ -65,6 +65,11 @@
       img/Eldara.jpg
      </a>
     </li>
+    <li>
+     <a class="image-index-link" href="img/Sifariato_Mountains.jpg">
+      img/Sifariato_Mountains.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
