--- a/campaign/locations/regions/Matella/Tinco_Merz/img/index.html
+++ b/campaign/locations/regions/Matella/Tinco_Merz/img/index.html
@@ -51,8 +51,18 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Stoneridge_Plateau.jpg">
+      Stoneridge Plateau.jpg
+     </a>
+    </li>
+    <li>
      <a href="Tinco_Merz.jpg">
       Tinco Merz.jpg
+     </a>
+    </li>
+    <li>
+     <a href="Volcanic_Plateau.jpg">
+      Volcanic Plateau.jpg
      </a>
     </li>
    </ul>
