--- a/campaign/locations/regions/Matella/Tinco_Merz/index.html
+++ b/campaign/locations/regions/Matella/Tinco_Merz/index.html
@@ -56,8 +56,18 @@
      </a>
     </li>
     <li>
+     <a class="image-index-link" href="img/Stoneridge_Plateau.jpg">
+      img/Stoneridge_Plateau.jpg
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/Tinco_Merz.jpg">
       img/Tinco_Merz.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Volcanic_Plateau.jpg">
+      img/Volcanic_Plateau.jpg
      </a>
     </li>
    </ul>
