--- a/campaign/quests/index.html
+++ b/campaign/quests/index.html
@@ -50,6 +50,11 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="manastorm_legal_advisors/index.html">
+      manastorm legal advisors
+     </a>
+    </li>
    </ul>
   </div>
  </body>
