--- a/campaign/quests/manastorm_legal_advisors/index.html
+++ b/campaign/quests/manastorm_legal_advisors/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,43 +46,23 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/locations/regions/Matella/Alderpine
+   Index of /home/awtorode/git/DnD/campaign/quests/manastorm_legal_advisors
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="Alderpine.html">
-      Alderpine
+     <a href="contract_PS.jpg">
+      contract PS.jpg
      </a>
     </li>
     <li>
-     <a href="Enthilma.html">
-      Enthilma
+     <a href="milton_signature_ambigram.jpg">
+      milton signature ambigram.jpg
      </a>
     </li>
     <li>
-     <a href="Riava_Plateau.html">
-      Riava Plateau
-     </a>
-    </li>
-    <li>
-     <a href="Talleril.html">
-      Talleril
-     </a>
-    </li>
-    <li>
-     <a class="image-index-link" href="img/Alderpine.jpg">
-      img/Alderpine.jpg
-     </a>
-    </li>
-    <li>
-     <a class="image-index-link" href="img/Riava_Plateau.jpg">
-      img/Riava_Plateau.jpg
-     </a>
-    </li>
-    <li>
-     <a class="image-index-link" href="img/Talleril.jpg">
-      img/Talleril.jpg
+     <a href="parchment.jpg">
+      parchment.jpg
      </a>
     </li>
    </ul>
